# Gambit

./: .env.example  .gitignore  CLAUDE.md  PREAMBLE.md  README.md  next.config.ts  package-lock.json  package.json  tailwind.config.js
plugin/: Cargo.toml  aomi.toml
plugin/src/: auth.rs  client.rs  lib.rs  tool.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/chat/: AomiChat.tsx  ChatApp.tsx  page.tsx
src/components/: DemoChat.tsx  Features.tsx  Footer.tsx  Hero.tsx  HowItWorks.tsx  Navbar.tsx
src/types/: privy.d.ts
