[package]
name = "gambit"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
aomi-sdk = { git = "https://github.com/aomi-labs/aomi-sdk" }
aomi-ext = { git = "https://github.com/aomi-labs/aomi-sdk", features = ["hmac-auth"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
schemars = "1.0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
